// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton should render DropdownButton 0: open--0 1`] = `
<div
  className="components-dropdown components-dropdown-toggle test1-class"
>
  <button
    aria-expanded={true}
    aria-haspopup="true"
    aria-label="test1-label"
    aria-pressed={true}
    className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-icon"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tooltip="test1-tooltip"
    type="button"
  >
    <span
      className="dashicon dashicons dashicons-dashicons-admin-site"
    />
  </button>
  <div
    onKeyDown={[Function]}
    tabIndex="-1"
  >
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="components-popover components-dropdown__content components-dropdown-button__popover test1-content-class is-without-arrow"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
        >
          <div
            className="components-popover__content"
            tabIndex="-1"
          >
            <div
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <iframe
                aria-hidden={true}
                frameBorder={0}
                src="about:blank"
                style={
                  Object {
                    "display": "block",
                    "height": "100%",
                    "left": 0,
                    "opacity": 0,
                    "overflow": "hidden",
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                    "zIndex": -1,
                  }
                }
                tabIndex={-1}
              />
              <div
                className="popover1"
              >
                test1
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownButton should render DropdownButton 0: test--0 1`] = `
<div
  className="components-dropdown components-dropdown-toggle test1-class"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="test1-label"
    aria-pressed={true}
    className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-icon"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tooltip="test1-tooltip"
    type="button"
  >
    <span
      className="dashicon dashicons dashicons-dashicons-admin-site"
    />
  </button>
</div>
`;

exports[`DropdownButton should render DropdownButton 1: test--1 1`] = `
<div
  className="components-dropdown components-dropdown-toggle test2-class"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="test2-label"
    aria-pressed={true}
    className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control is-active is-pressed has-icon"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tooltip="test2-label"
    type="button"
  >
    <span
      className="dashicon dashicons dashicons-menu"
    />
  </button>
</div>
`;

exports[`DropdownButton should render DropdownButton 2: test--2 1`] = `
<div
  className="components-dropdown components-dropdown-toggle test3-class"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="test3-label"
    aria-pressed={false}
    className="components-button components-dropdown-button__toggle components-toolbar__control utils--components-toolbar__control has-text has-icon"
    disabled={true}
    onClick={[Function]}
    tooltip="test3-label"
    type="button"
  >
    <span
      className="dashicon dashicons dashicons-menu"
    />
    <span
      className="components-dropdown-menu__indicator"
    />
  </button>
</div>
`;
